--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "passport-local": "^1.0.0",
     "qs": "^6.9.4",
     "socket.io": "^2.3.0",
     "ws": "^7.3.1"
