--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -21,10 +22,10 @@
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "passport-local": "^1.0.0",
+    "passport": "^0.4.1",
+    "passport-spotify": "^1.1.0",
     "qs": "^6.9.4",
-    "socket.io": "^2.3.0",
-    "ws": "^7.3.1"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
