--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hamburger-button": "0.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "socket.io-client": "^2.3.0",
